# sqlite-wasm-reader

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: between_example.rs  count_rows.rs  logging_example.rs  query_example.rs  read_db.rs  table_scan_example.rs  wasi_example.rs
src/: btree.rs  database.rs  error.rs  format.rs  lib.rs  logging.rs  page.rs  query.rs  record.rs  value.rs
tests/: integration_test.rs  query_execution.rs
